--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,18 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+
+	
 
 	<dependencies>
+
+<dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>28.0-jre</version>
+</dependency>
+
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
